--- a/pom.xml
+++ b/pom.xml
@@ -177,9 +177,6 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <testFailureIgnore>true</testFailureIgnore>
-        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -266,11 +263,11 @@
         <artifactId>maven-project-info-reports-plugin</artifactId>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>changes-maven-plugin</artifactId>
+        <artifactId>maven-changes-plugin</artifactId>
         <configuration>
           <inherited>false</inherited>
           <link_template>%URL%/%ISSUE%</link_template>
+          <xmlPath>${basedir}/src/site/changes/changes.xml</xmlPath>
         </configuration>
       </plugin>
       <plugin>
@@ -297,6 +294,12 @@
         <groupId>commons-beanutils</groupId>
         <artifactId>commons-beanutils</artifactId>
         <version>1.7.0</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>commons-collections</groupId>
@@ -306,26 +309,17 @@
       <dependency>
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
-        <version>2.1</version>
+        <version>2.3</version>
       </dependency>
       <dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging</artifactId>
-        <version>1.0.4</version>
-        <exclusions>
-          <exclusion>
-            <artifactId>avalon-framework</artifactId>
-            <groupId>avalon-framework</groupId>
-          </exclusion>
-          <exclusion>
-            <artifactId>logkit</artifactId>
-            <groupId>logkit</groupId>
-          </exclusion>
-          <exclusion>
-            <artifactId>log4j</artifactId>
-            <groupId>log4j</groupId>
-          </exclusion>
-        </exclusions>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl104-over-slf4j</artifactId>
+        <version>1.4.2</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.4.2</version>
       </dependency>
       <dependency>
         <groupId>log4j</groupId>
@@ -352,7 +346,7 @@
       <dependency>
         <groupId>httpunit</groupId>
         <artifactId>httpunit</artifactId>
-        <version>1.6.1</version>
+        <version>1.6.2</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -389,37 +383,82 @@
         <artifactId>commons-el</artifactId>
         <version>1.0</version>
         <scope>compile</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>struts</groupId>
         <artifactId>struts</artifactId>
         <version>1.2.7</version>
+        <exclusions>
+          <exclusion>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-core</artifactId>
-        <version>1.2.6</version>
+        <version>2.0.6</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
-        <version>1.2.6</version>
+        <version>2.0.6</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-mock</artifactId>
-        <version>1.2.6</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-sandbox</artifactId>
-        <version>1.2.6</version>
+        <version>2.0.6</version>
       </dependency>
       <dependency>
         <groupId>opensymphony</groupId>
         <artifactId>webwork</artifactId>
         <version>2.1.5</version>
         <optional>true</optional>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>com.servlets</groupId>
+            <artifactId>cos</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>opensymphony</groupId>
+            <artifactId>pell-multipart</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>velocity</groupId>
+            <artifactId>velocity-dep</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>opensymphony</groupId>
@@ -440,9 +479,9 @@
         <optional>true</optional>
       </dependency>
       <dependency>
-        <groupId>poi</groupId>
+        <groupId>org.apache.poi</groupId>
         <artifactId>poi</artifactId>
-        <version>2.5.1-final-20040804</version>
+        <version>3.0-FINAL</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -454,7 +493,7 @@
     <site>
       <id>displaytag</id>
       <name>displaytag</name>
-      <url>scpexe://shell.sourceforge.net/home/groups/d/di/displaytag/htdocs/11/</url>
+      <url>scp://shell.sourceforge.net/home/groups/d/di/displaytag/htdocs/11/</url>
     </site>
   </distributionManagement>
 </project>
