--- a/displaytag-export-poi/pom.xml
+++ b/displaytag-export-poi/pom.xml
@@ -16,9 +16,9 @@
     Microsoft Excel binary format through Jakarta POI.
   </description>
   <scm>
-    <connection>scm:svn:https://displaytag.svn.sourceforge.net/svnroot/displaytag/tags/displaytag-doc-1.1.1</connection>
-    <developerConnection>scm:svn:https://displaytag.svn.sourceforge.net/svnroot/displaytag/tags/displaytag-doc-1.1.1</developerConnection>
-    <url>http://displaytag.svn.sourceforge.net/viewcvs.cgi/displaytag/tags/displaytag-doc-1.1.1</url>
+    <connection>scm:svn:https://displaytag.svn.sourceforge.net/svnroot/displaytag/tags/displaytag-1.1.1/displaytag-export-poi</connection>
+    <developerConnection>scm:svn:https://displaytag.svn.sourceforge.net/svnroot/displaytag/tags/displaytag-1.1.1/displaytag-export-poi</developerConnection>
+    <url>http://displaytag.svn.sourceforge.net/viewcvs.cgi/displaytag/tags/displaytag-1.1.1/displaytag-export-poi</url>
   </scm>
   <dependencies>
     <dependency>
