--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,7 @@
           </descriptors>
           <finalName>displaytag-${pom.version}</finalName>
         </configuration>
+        <version>2.1</version>
       </plugin>
     </plugins>
   </build>
