--- a/displaytag/src/main/resources/org/displaytag/properties/displaytag.properties
+++ b/displaytag/src/main/resources/org/displaytag/properties/displaytag.properties
@@ -91,6 +91,7 @@ paging.banner.full=<span class="pagelinks">[<a href="{1}">First</a>/<a href="{2}
 paging.banner.first=<span class="pagelinks">[First/Prev] {0} [<a href="{3}">Next</a>/<a href="{4}">Last</a>]</span>
 paging.banner.last=<span class="pagelinks">[<a href="{1}">First</a>/<a href="{2}">Prev</a>] {0} [Next/Last]</span>
 paging.banner.onepage=<span class="pagelinks">{0}</span>
+paging.banner.viewallresults=<span class="pagelinks"><a href="{7}">View all results</a></span>
 
 paging.banner.page.selected=<strong>{0}</strong>
 paging.banner.page.link=<a href="{1}" title="Go to page {0}">{0}</a>
